--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -2,7 +2,7 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: 'Arial', sans-serif;
+    font-family: "Arial", sans-serif;
     background-color: #121212;
     color: #f1f1f1;
     display: flex;
