--- a/templates/en.html
+++ b/templates/en.html
@@ -5,6 +5,7 @@
 <a href="/lv">LV</a>
 <a href="/ru">RU</a>
 {% endblock %} {% block welcome %}
-<i>Welcome to ZiemelRietumu Radio</i>, your home for the best blues, metal, and
-rock music. {% endblock %} {% block contact %} For requests, contact us at:
-<a href="mailto:dj@ZiemelRietumu.live">dj@ZiemelRietumu.live</a> {% endblock %}
+<i>Welcome to ZiemeļRietumu Radio</i>,<br />
+Heavy Music for a Lite Mood. {% endblock %} {% block contact %} For requests,
+contact us at:
+<a href="mailto:dj@ziemelrietumu.live">dj@ziemelrietumu.live</a> {% endblock %}
