--- a/templates/ru.html
+++ b/templates/ru.html
@@ -5,8 +5,8 @@
     ><b><u>RU</u></b></a
 >
 {% endblock %} {% block welcome %}
-<i>Добро пожаловать на радио ZiemelRietumu</i>, ваш дом для лучшей блюзовой,
-метал и рок музыки. {% endblock %} {% block contact %} Для запросов свяжитесь с
-нами по адресу:
-<a href="mailto:dj@ZiemelRietumu.live">dj@ZiemelRietumu.live</a>
+<i>Добро пожаловать на радио ZiemeļRietumu</i>,<br />
+Тяжелая музыка для легкого настроения. {% endblock %} {% block contact %} Для
+запросов свяжитесь с нами по адресу:
+<a href="mailto:dj@ziemelrietumu.live">dj@ziemelrietumu.live</a>
 {% endblock %}
