--- a/templates/lv.html
+++ b/templates/lv.html
@@ -5,8 +5,8 @@
 >
 <a href="/ru">RU</a>
 {% endblock %} {% block welcome %}
-<i>Laipni lūdzam ZiemelRietumu Radio</i>, jūsu mājās labākajai blues, metal un
-rock mūzikai. {% endblock %} {% block contact %} Lūdzu, sazinieties ar mums, lai
-veiktu pieprasījumus uz:
-<a href="mailto:dj@ZiemelRietumu.live">dj@ZiemelRietumu.live</a>
+<i>Laipni lūdzam ZiemeļRietumu Radio</i>,<br />
+Smaga mūzika vieglam noskaņojumam. {% endblock %} {% block contact %} Lūdzu,
+sazinieties ar mums, lai veiktu pieprasījumus uz:
+<a href="mailto:dj@ziemelrietumu.live">dj@ziemelrietumu.live</a>
 {% endblock %}
