--- a/templates/template.html
+++ b/templates/template.html
@@ -34,7 +34,7 @@
                 <div class="audio-player">
                     <audio controls autoplay>
                         <source
-                            src="http://89.221.119.103:8000/stream"
+                            src="/stream"
                             type="audio/mpeg"
                         />
                         Your browser does not support the audio element.
